--- a/res/HD/spritesheet.plist
+++ b/res/HD/spritesheet.plist
@@ -4,36 +4,10 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>Mina-1.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,311},{25,10}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{25,10}}</string>
-                <key>sourceSize</key>
-                <string>{25,10}</string>
-            </dict>
-            <key>Mina-2.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{1746,147},{20,7}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{20,7}}</string>
-                <key>sourceSize</key>
-                <string>{20,7}</string>
-            </dict>
             <key>big-stone.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{1908,154},{90,90}}</string>
+                <string>{{116,1654},{90,90}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -46,11 +20,11 @@
             <key>buggy.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{1604,55},{140,112}}</string>
+                <string>{{2,1604},{140,112}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{140,112}}</string>
                 <key>sourceSize</key>
@@ -59,7 +33,7 @@
             <key>bullet-h.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{1908,325},{16,4}}</string>
+                <string>{{292,1733},{16,4}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -72,7 +46,7 @@
             <key>bullet-v.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{1926,325},{4,16}}</string>
+                <string>{{292,1739},{4,16}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -85,7 +59,7 @@
             <key>enemy-bullet-v.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{1926,325},{4,16}}</string>
+                <string>{{292,1739},{4,16}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -95,75 +69,179 @@
                 <key>sourceSize</key>
                 <string>{4,16}</string>
             </dict>
+            <key>enemyrocket-1.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{236,1861},{13,29}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,1},{13,29}}</string>
+                <key>sourceSize</key>
+                <string>{13,31}</string>
+            </dict>
+            <key>enemyrocket-2.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{292,1698},{16,33}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,1},{16,33}}</string>
+                <key>sourceSize</key>
+                <string>{16,35}</string>
+            </dict>
             <key>explosion-1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{1908,2},{150,90}}</string>
+                <string>{{2,1849},{34,70}}</string>
+                <key>offset</key>
+                <string>{0,1}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{133,114},{34,70}}</string>
+                <key>sourceSize</key>
+                <string>{300,300}</string>
+            </dict>
+            <key>explosion-10.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{251,1883},{34,36}}</string>
+                <key>offset</key>
+                <string>{0,1}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{133,131},{34,36}}</string>
+                <key>sourceSize</key>
+                <string>{300,300}</string>
+            </dict>
+            <key>explosion-11.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{268,1698},{1,1}}</string>
+                <key>offset</key>
+                <string>{-149.5,149.5}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{1,1}}</string>
+                <key>sourceSize</key>
+                <string>{300,300}</string>
+            </dict>
+            <key>explosion-2.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{208,1702},{40,82}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{150,90}}</string>
+                <string>{{130,109},{40,82}}</string>
                 <key>sourceSize</key>
-                <string>{150,90}</string>
-            </dict>
-            <key>explosion-2.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{1756,239},{150,90}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{150,90}}</string>
-                <key>sourceSize</key>
-                <string>{150,90}</string>
+                <string>{300,300}</string>
             </dict>
             <key>explosion-3.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{1756,147},{150,90}}</string>
+                <string>{{98,1799},{48,90}}</string>
                 <key>offset</key>
-                <string>{0,0}</string>
+                <string>{-1,0}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{150,90}}</string>
+                <string>{{125,105},{48,90}}</string>
                 <key>sourceSize</key>
-                <string>{150,90}</string>
+                <string>{300,300}</string>
             </dict>
             <key>explosion-4.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{1604,169},{150,90}}</string>
+                <string>{{2,1799},{48,94}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{150,90}}</string>
+                <string>{{126,103},{48,94}}</string>
                 <key>sourceSize</key>
-                <string>{150,90}</string>
+                <string>{300,300}</string>
             </dict>
             <key>explosion-5.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{1746,55},{150,90}}</string>
+                <string>{{116,1604},{48,100}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{126,100},{48,100}}</string>
+                <key>sourceSize</key>
+                <string>{300,300}</string>
+            </dict>
+            <key>explosion-6.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{218,1602},{48,98}}</string>
+                <key>offset</key>
+                <string>{-1,0}</string>
+                <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{150,90}}</string>
+                <string>{{125,101},{48,98}}</string>
                 <key>sourceSize</key>
-                <string>{150,90}</string>
+                <string>{300,300}</string>
+            </dict>
+            <key>explosion-7.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{252,1799},{48,82}}</string>
+                <key>offset</key>
+                <string>{0,1}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{126,108},{48,82}}</string>
+                <key>sourceSize</key>
+                <string>{300,300}</string>
+            </dict>
+            <key>explosion-8.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{136,1849},{48,50}}</string>
+                <key>offset</key>
+                <string>{-1,1}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{125,124},{48,50}}</string>
+                <key>sourceSize</key>
+                <string>{300,300}</string>
+            </dict>
+            <key>explosion-9.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{186,1861},{48,36}}</string>
+                <key>offset</key>
+                <string>{-1,1}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{125,131},{48,36}}</string>
+                <key>sourceSize</key>
+                <string>{300,300}</string>
             </dict>
             <key>fire.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{1664,293},{30,30}}</string>
+                <string>{{2,1885},{30,30}}</string>
                 <key>offset</key>
                 <string>{-1,1}</string>
                 <key>rotated</key>
@@ -176,11 +254,11 @@
             <key>ground.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,110},{1600,104}}</string>
+                <string>{{110,2},{1600,104}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{1600,104}}</string>
                 <key>sourceSize</key>
@@ -189,7 +267,7 @@
             <key>hole.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{1602,261},{60,60}}</string>
+                <string>{{74,1849},{60,60}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -206,7 +284,7 @@
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{1600,106}}</string>
                 <key>sourceSize</key>
@@ -215,11 +293,11 @@
             <key>landscape2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,216},{1598,93}}</string>
+                <string>{{216,2},{1598,93}}</string>
                 <key>offset</key>
                 <string>{-1,0}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{1598,93}}</string>
                 <key>sourceSize</key>
@@ -228,7 +306,7 @@
             <key>logo-studio.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{1604,2},{297,51}}</string>
+                <string>{{2,1746},{297,51}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -241,7 +319,7 @@
             <key>rocket-1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{1970,246},{30,11}}</string>
+                <string>{{297,1602},{30,11}}</string>
                 <key>offset</key>
                 <string>{1,1}</string>
                 <key>rotated</key>
@@ -254,7 +332,7 @@
             <key>rocket-2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{1908,308},{34,15}}</string>
+                <string>{{268,1681},{34,15}}</string>
                 <key>offset</key>
                 <string>{0,-1}</string>
                 <key>rotated</key>
@@ -267,7 +345,7 @@
             <key>stone.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{1908,246},{60,60}}</string>
+                <string>{{190,1799},{60,60}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -280,15 +358,15 @@
             <key>ufo-1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{1664,261},{70,30}}</string>
+                <string>{{268,1602},{77,27}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{70,30}}</string>
+                <string>{{0,0},{77,27}}</string>
                 <key>sourceSize</key>
-                <string>{70,30}</string>
+                <string>{77,27}</string>
             </dict>
         </dict>
         <key>metadata</key>
@@ -298,9 +376,9 @@
             <key>realTextureFileName</key>
             <string>spritesheet.png</string>
             <key>size</key>
-            <string>{2000,331}</string>
+            <string>{311,1919}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:0aafdbf56ae49142568fec0e86e8e03f:2000d2f561f9c8b2034aba9cc31c78b4:1de88c2a7237d4cdf78de8d8ad4f4c7e$</string>
+            <string>$TexturePacker:SmartUpdate:d31c7e8d538c4b5ad60e12dd0b121549:83fe25fc7d81b7d39328bcb213c9cd73:1de88c2a7237d4cdf78de8d8ad4f4c7e$</string>
             <key>textureFileName</key>
             <string>spritesheet.png</string>
         </dict>
