--- a/res/HD/explosion_anim.plist
+++ b/res/HD/explosion_anim.plist
@@ -7,11 +7,11 @@
             <key>explosion_bullet1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{946,2},{92,73}}</string>
+                <string>{{5,2},{92,73}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{92,73}}</string>
                 <key>sourceSize</key>
@@ -20,7 +20,7 @@
             <key>explosion_bullet10.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{193,2},{189,113}}</string>
+                <string>{{755,108},{189,113}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -33,7 +33,7 @@
             <key>explosion_bullet11.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,119},{167,100}}</string>
+                <string>{{693,2},{167,100}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -46,7 +46,7 @@
             <key>explosion_bullet12.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{370,119},{157,88}}</string>
+                <string>{{373,2},{157,88}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -56,10 +56,23 @@
                 <key>sourceSize</key>
                 <string>{157,88}</string>
             </dict>
+            <key>explosion_bullet13.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,2},{1,1}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{1,1}}</string>
+                <key>sourceSize</key>
+                <string>{1,1}</string>
+            </dict>
             <key>explosion_bullet2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{887,129},{120,86}}</string>
+                <string>{{99,2},{120,86}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -72,7 +85,7 @@
             <key>explosion_bullet3.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{735,129},{150,90}}</string>
+                <string>{{221,2},{150,90}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -85,7 +98,7 @@
             <key>explosion_bullet4.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{574,118},{159,101}}</string>
+                <string>{{532,2},{159,101}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -98,7 +111,7 @@
             <key>explosion_bullet5.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{193,117},{175,104}}</string>
+                <string>{{862,2},{175,104}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -111,7 +124,7 @@
             <key>explosion_bullet6.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{574,2},{186,114}}</string>
+                <string>{{186,108},{186,114}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -124,7 +137,7 @@
             <key>explosion_bullet7.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{384,2},{188,115}}</string>
+                <string>{{374,108},{188,115}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -137,7 +150,7 @@
             <key>explosion_bullet8.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{189,115}}</string>
+                <string>{{564,108},{189,115}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -150,7 +163,7 @@
             <key>explosion_bullet9.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{762,2},{182,125}}</string>
+                <string>{{2,108},{182,125}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -168,9 +181,9 @@
             <key>realTextureFileName</key>
             <string>explosion_anim.png</string>
             <key>size</key>
-            <string>{1021,223}</string>
+            <string>{1039,235}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:01a49cb5e485eccd3202bc15fced17bf:ed5167b8ed98408a50199025143ff006:49cc5f28d71535fe11b8dda1bfbf7475$</string>
+            <string>$TexturePacker:SmartUpdate:30319a146512667198b04fb67966bdf0:bb00c826922cbdbb7c58ba452b6f3818:49cc5f28d71535fe11b8dda1bfbf7475$</string>
             <key>textureFileName</key>
             <string>explosion_anim.png</string>
         </dict>
